Hexadron Launcher Beta 0.9.9 security update